# htmlucinate

./: .env.example  .gitignore  .gitmodules  Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: ci.yml
src/: agent.rs  index.html  main.rs  routes.rs  session.rs
